# AI_on_AWS

./: .gitignore  README.md
0_Purpose_Built_AI_Services/: README.md  comprehend.md  intro-to-ai-on-aws.md  lex.md  polly.md  rekognition.md  textract.md  transcribe.md  translate.md
0_Purpose_Built_AI_Services/demo/: .env.example  README.md  aws_ai_services_examples.ipynb  requirements.txt
1_Purpose_Built_AI_Services_Demo_Apps/: README.md
1_Purpose_Built_AI_Services_Demo_Apps/AWS_App_Deployment/: setup.sh
1_Purpose_Built_AI_Services_Demo_Apps/Insurance_Claim_Submission/: .env.example  .gitignore  QUICKSTART.md  README.md
1_Purpose_Built_AI_Services_Demo_Apps/Multilingual_Chat/: .env.example  QUICKSTART.md  README.md
2_Amazon_Bedrock/: README.md
2_Amazon_Bedrock/backend/: env.example  main.py  model_limits.json  pyproject.toml
2_Amazon_Bedrock/frontend/: pyproject.toml  (+1 more)
3_Bedrock_App_Integration/: .gitignore  README.md
3_Bedrock_App_Integration/backend/: .env.example  README.md  __init__.py  config.py  main.py  model_limits.json  models.py  pyproject.toml  storage.py  utils.py
3_Bedrock_App_Integration/backend/Postman/: Bedrock_Chat_API.postman_collection.json  Bedrock_Chat_API.postman_environment.json  README.md
3_Bedrock_App_Integration/backend/routers/: __init__.py  admin.py  chat.py  config.py  conversations.py
4_Bedrock_RAG_KB/: lambda.py
5_Bedrock_RAG_KB_App_Integration/: README.md
6_Bedrock_RAG_KB_S3_Vectors/: Comparison_Modules_4_5_6.md  MANUAL_DEPLOYMENT.md  README.md  env.example
7_Bedrock_Agents/: README.md  env.example
(+173 files in other folders)
